# Projet_Yams

Projet_Yams/: CMakeLists.txt  Makefile  Makefile.txt  lisez-moi.txt  main.cpp
Projet_Yams/Jeu/: Game.cpp  Game.h  Joueur.cpp  Joueur.h  Lancer.cpp  Lancer.h
Projet_Yams/Jeu/Figures/: Chance.cpp  Chance.h  Combinaison.cpp  Combinaison.h  Figure.cpp  Figure.h  Full.cpp  Full.h  Grande_Suite.cpp  Grande_Suite.h  Petite_Suite.cpp  Petite_Suite.h
Projet_Yams/Jeu/Figures/Templates/: Brelan.h  Carree.h  Full.h  Yams.h
Projet_Yams/tests/: TestBrelan.cpp  TestCarree.cpp  TestChance.cpp  TestFull.cpp  TestGrandeSuite.cpp  TestJoueurs.cpp  TestLancer.cpp  TestYams.cpp  testPetiteSuite.cpp
